@@ -406,10 +406,19 @@ fs_on_privmsg(va_list args)
         ilog(L_NOTICE, "Flood %s@%s TRIGGERED NETWORK MSG FLOOD Message: %s",
           source->name, host, message);
         snprintf(mask, IRC_BUFSIZE, "*@%s", host);
+
+        if((akill = db_find_akill(mask)) != NULL)
+        {
+          ilog(L_NOTICE, "Flood AKILL Already Exists");
+          free_serviceban(akill);
+          return pass_callback(fs_privmsg_hook, source, channel, message);
+        }
+
         akill = akill_add(floodserv, fsclient, mask, FS_KILL_MSG, FS_KILL_DUR);
 
         if(akill != NULL)
           free_serviceban(akill);
+
         return pass_callback(fs_privmsg_hook, source, channel, message);
         break;
     }
